# pytorch-cpp-inference

./: .gitignore
inference-cpp/cnn-classification/: CMakeLists.txt  infer.cc  main.cc
inference-cpp/cnn-classification/server/: CMakeLists.txt  main.cc  test_api.py
models/resnet/: labels.txt  resnet-pds.py
utils/: opencvutils.cc  torchutils.cc
